--- a/aula04/aula 04.ipynb
+++ b/aula04/aula 04.ipynb
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
        "-3.0"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,6 +361,67 @@
    "source": [
     "baskhara(2,8,6,2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Funções Map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[24.84, 31.06, 46.58, 62.11, 124.22]\n"
+     ]
+    }
+   ],
+   "source": [
+    "kph = [40,50,75,100,200]\n",
+    "mph = []\n",
+    "for i in kph:\n",
+    "    mph.append(round(i/1.61,2))\n",
+    "print(mph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[24.84, 31.06, 46.58, 62.11, 124.22]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mph2 = list(map(lambda x: round(x/1.61,2),kph))\n",
+    "print(mph2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercício 02\n",
+    "> Crie um programa que calcule 5 valores dentro de uma lista chamada celsius. Crie uma nova lista vazia chamada fahrenheit e armazene a conversão dos valores de celsius ustilizando lambda com map. No final exiba o valor da lista fahrenheit."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
