--- a/aula05/aula05.ipynb
+++ b/aula05/aula05.ipynb
@@ -106,6 +106,54 @@
    "source": [
     "> Crie um lista com 10 valores em metros. Crie uma tabela de conversão para polegadas, pés, jardas e mílhas marítimas. Listando o número da linha e o cabeçalho da tabela."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'sort'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[44], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m met\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m60\u001b[39m,\u001b[38;5;241m100\u001b[39m,\u001b[38;5;241m15\u001b[39m,\u001b[38;5;241m12\u001b[39m,\u001b[38;5;241m26\u001b[39m,\u001b[38;5;241m55\u001b[39m,\u001b[38;5;241m47\u001b[39m,\u001b[38;5;241m89\u001b[39m,\u001b[38;5;241m60\u001b[39m,\u001b[38;5;241m35\u001b[39m,\u001b[38;5;241m67\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[43mmet\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msort\u001b[49m()\n\u001b[0;32m      3\u001b[0m pol \u001b[38;5;241m=\u001b[39m[\u001b[38;5;28mround\u001b[39m(x\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m39.37\u001b[39m,\u001b[38;5;241m2\u001b[39m)\u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m met]\n\u001b[0;32m      4\u001b[0m pes \u001b[38;5;241m=\u001b[39m[\u001b[38;5;28mround\u001b[39m(x\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m3.28\u001b[39m,\u001b[38;5;241m2\u001b[39m)\u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m met]\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'sort'"
+     ]
+    }
+   ],
+   "source": [
+    "met=(60,100,15,12,26,55,47,89,60,35,67)\n",
+    "met.sort()\n",
+    "pol =[round(x*39.37,2)for x in met]\n",
+    "pes =[round(x*3.28,2)for x in met]\n",
+    "jar =[round(x*1.09,2)for x in met]\n",
+    "mil =[round((x*0.6214)/1000,3)for x in met]\n",
+    "\n",
+    "print(\"{:<5}{:<5}{:<10}{:<9}{:<8}{:<8}\".format(\"N°\",\"m\",\"in\",\"ft\",\"yd\",\"mi\"))\n",
+    "print(\"=============================================\")\n",
+    "for v in range(0,len(met),1):\n",
+    "    print(\"{:<5}{:<5}{:<10}{:<9}{:<8}{:<8}\".format(v+1,met[v],pol[v],pes[v],jar[v],mil[v]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = [100,200,120,170,205,24,]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercício 3\n",
+    "> Crie uma lista de 10 pesos em kilos. Faça a conversão para o peso na Terra, Lua, Jupter, Saturno, Mercúrio. Monte uma tabela com o cabeçalho e a numeração conforme os exercícios passados."
+   ]
   }
  ],
  "metadata": {
