--- a/aula05/aula05.ipynb
+++ b/aula05/aula05.ipynb
@@ -109,42 +109,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'tuple' object has no attribute 'sort'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[44], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m met\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m60\u001b[39m,\u001b[38;5;241m100\u001b[39m,\u001b[38;5;241m15\u001b[39m,\u001b[38;5;241m12\u001b[39m,\u001b[38;5;241m26\u001b[39m,\u001b[38;5;241m55\u001b[39m,\u001b[38;5;241m47\u001b[39m,\u001b[38;5;241m89\u001b[39m,\u001b[38;5;241m60\u001b[39m,\u001b[38;5;241m35\u001b[39m,\u001b[38;5;241m67\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[43mmet\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msort\u001b[49m()\n\u001b[0;32m      3\u001b[0m pol \u001b[38;5;241m=\u001b[39m[\u001b[38;5;28mround\u001b[39m(x\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m39.37\u001b[39m,\u001b[38;5;241m2\u001b[39m)\u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m met]\n\u001b[0;32m      4\u001b[0m pes \u001b[38;5;241m=\u001b[39m[\u001b[38;5;28mround\u001b[39m(x\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m3.28\u001b[39m,\u001b[38;5;241m2\u001b[39m)\u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m met]\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'sort'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linha  Metros     Polegadas    Pés        Jardas     Milhas Marítimas\n",
+      "----------------------------------------------------------------------\n",
+      "1      1          39.37        3.28       1.09       0.000540       \n",
+      "2      5          196.85       16.40      5.47       0.002700       \n",
+      "3      10         393.70       32.81      10.94      0.005400       \n",
+      "4      15         590.55       49.21      16.40      0.008099       \n",
+      "5      20         787.40       65.62      21.87      0.010799       \n",
+      "6      25         984.25       82.02      27.34      0.013499       \n",
+      "7      30         1181.10      98.43      32.81      0.016199       \n",
+      "8      35         1377.95      114.83     38.28      0.018898       \n",
+      "9      40         1574.80      131.23     43.74      0.021598       \n",
+      "10     50         1968.51      164.04     54.68      0.026998       \n"
      ]
     }
    ],
    "source": [
-    "met=(60,100,15,12,26,55,47,89,60,35,67)\n",
-    "met.sort()\n",
-    "pol =[round(x*39.37,2)for x in met]\n",
-    "pes =[round(x*3.28,2)for x in met]\n",
-    "jar =[round(x*1.09,2)for x in met]\n",
-    "mil =[round((x*0.6214)/1000,3)for x in met]\n",
-    "\n",
-    "print(\"{:<5}{:<5}{:<10}{:<9}{:<8}{:<8}\".format(\"N°\",\"m\",\"in\",\"ft\",\"yd\",\"mi\"))\n",
-    "print(\"=============================================\")\n",
-    "for v in range(0,len(met),1):\n",
-    "    print(\"{:<5}{:<5}{:<10}{:<9}{:<8}{:<8}\".format(v+1,met[v],pol[v],pes[v],jar[v],mil[v]))\n"
+    "valoresmetros = [1, 5, 10, 15, 20, 25, 30, 35, 40, 50]\n",
+    "header = [\"Linha\", \"Metros\", \"Polegadas\", \"Pés\", \"Jardas\", \"Milhas Marítimas\"]\n",
+    "tabelaconversao = [\n",
+    "    [i + 1,\n",
+    "     valor,\n",
+    "     valor * 39.3701,\n",
+    "     valor * 3.28084,\n",
+    "     valor * 1.09361,\n",
+    "     valor * 0.000539957]\n",
+    "    for i, valor in enumerate(valoresmetros)\n",
+    "]\n",
+    "print(f\"{header[0]:<6} {header[1]:<10} {header[2]:<12} {header[3]:<10} {header[4]:<10} {header[5]:<15}\")\n",
+    "print(\"-\" * 70)\n",
+    "for linha in tabelaconversao:\n",
+    "    print(f\"{linha[0]:<6} {linha[1]:<10} {linha[2]:<12.2f} {linha[3]:<10.2f} {linha[4]:<10.2f} {linha[5]:<15.6f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercício 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linha      Celsius    Fahrenheit\n",
+      "1          0.00       32.00     \n",
+      "2          26.85      80.33     \n",
+      "3          76.85      170.33    \n",
+      "4          126.85     260.33    \n",
+      "5          176.85     350.33    \n",
+      "6          226.85     440.33    \n",
+      "7          276.85     530.33    \n",
+      "8          326.85     620.33    \n",
+      "9          376.85     710.33    \n",
+      "10         426.85     800.33    \n"
+     ]
+    }
+   ],
    "source": [
-    "k = [100,200,120,170,205,24,]"
+    "kelvin = [273.15, 300, 350, 400, 450, 500, 550, 600, 650, 700]\n",
+    "print(\"{:<10} {:<10} {:<10}\".format(\"Linha\", \"Celsius\", \"Fahrenheit\"))\n",
+    "for i, k in enumerate(kelvin):\n",
+    "    celsius = k - 273.15\n",
+    "    fahrenheit = (celsius * 9/5) + 32\n",
+    "    print(\"{:<10} {:<10.2f} {:<10.2f}\".format(i + 1, celsius, fahrenheit))\n"
    ]
   },
   {
@@ -153,6 +194,56 @@
    "source": [
     "## Exercício 3\n",
     "> Crie uma lista de 10 pesos em kilos. Faça a conversão para o peso na Terra, Lua, Jupter, Saturno, Mercúrio. Monte uma tabela com o cabeçalho e a numeração conforme os exercícios passados."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linha  Quilos     Peso na Terra   Peso na Lua     Peso em Júpiter      Peso em Saturno Peso em Mercúrio\n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "1      10         98.10           16.20           247.90               104.40          37.00          \n",
+      "2      20         196.20          32.40           495.80               208.80          74.00          \n",
+      "3      30         294.30          48.60           743.70               313.20          111.00         \n",
+      "4      40         392.40          64.80           991.60               417.60          148.00         \n",
+      "5      50         490.50          81.00           1239.50              522.00          185.00         \n",
+      "6      60         588.60          97.20           1487.40              626.40          222.00         \n",
+      "7      70         686.70          113.40          1735.30              730.80          259.00         \n",
+      "8      80         784.80          129.60          1983.20              835.20          296.00         \n",
+      "9      90         882.90          145.80          2231.10              939.60          333.00         \n",
+      "10     100        981.00          162.00          2479.00              1044.00         370.00         \n"
+     ]
+    }
+   ],
+   "source": [
+    "pesosquilos = [10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
+    "gravidades = {\n",
+    "    \"Terra\": 9.81,\n",
+    "    \"Lua\": 1.62,\n",
+    "    \"Júpiter\": 24.79,\n",
+    "    \"Saturno\": 10.44,\n",
+    "    \"Mercúrio\": 3.7\n",
+    "}\n",
+    "header = [\"Linha\", \"Quilos\", \"Peso na Terra\", \"Peso na Lua\", \"Peso em Júpiter\", \"Peso em Saturno\", \"Peso em Mercúrio\"]\n",
+    "tabelapesos = [\n",
+    "    [i + 1,\n",
+    "     peso,\n",
+    "     peso * gravidades[\"Terra\"],\n",
+    "     peso * gravidades[\"Lua\"],\n",
+    "     peso * gravidades[\"Júpiter\"],\n",
+    "     peso * gravidades[\"Saturno\"],\n",
+    "     peso * gravidades[\"Mercúrio\"]]\n",
+    "    for i, peso in enumerate(pesosquilos)\n",
+    "]\n",
+    "print(f\"{header[0]:<6} {header[1]:<10} {header[2]:<15} {header[3]:<15} {header[4]:<20} {header[5]:<15} {header[6]:<15}\")\n",
+    "print(\"-\" * 95)\n",
+    "for linha in tabelapesos:\n",
+    "    print(f\"{linha[0]:<6} {linha[1]:<10} {linha[2]:<15.2f} {linha[3]:<15.2f} {linha[4]:<20.2f} {linha[5]:<15.2f} {linha[6]:<15.2f}\")"
    ]
   }
  ],
